--- a/wajibisha/templates/blocks/promises-header.html
+++ b/wajibisha/templates/blocks/promises-header.html
@@ -4,7 +4,7 @@
 		<div class="column-third text-left">
 			<h2>Nairobi</h2>
 			<div class="blue-text">
-				<p style="margin:0;">Population: 3,138,369</p>
+				<p class="m-0">Population: 3,138,369</p>
 				<p>Area: 696 sq.km</p>
 			</div>
 			<p class="blue-text">Censes data: 2009</p>
@@ -29,36 +29,36 @@
       </div>
     </div>
 
-    <div class="column-third" style="padding-left:15rem;">
-      <div class="card p-0 body-text" style="width:600px;height:260px;margin-top:-8rem;">
-        <div class="card-title pt-3" style="color:#707070;">OVERVIEW</div>
+    <div class="column-third overview">
+      <div class="card-position card p-0 body-text">
+        <div class="card-title pt-3 body-text">OVERVIEW</div>
         <div class="card-body">
 
           <div class="column-third body-text">
             <div class="d-flex flex-column pl-3">
               <p class="text-left">
-                <b class="text-success" style="font-size:1.4rem;">7</b><br>
+                <b class="content-font-size text-success" >7</b><br>
                 Promises fulfilled
               </p>
               <p class="text-left">
-                <b class="text-primary" style="font-size:1.4rem;">12</b><br>
+                <b class="content-font-size text-primary">12</b><br>
                 Promises in progress
               </p>
             </div>
           </div>
           <div class="column-third body-text">
             <img src="{% static 'img/tracker/ring-pie-chart.svg' %}">
-            <p class="pt-0 text-center pr-5 pl-5" style="margin-top:-8rem;font-weight:100;"><b style="font-size:2rem;">63</b> Promises in total</p>
+            <p class="pt-0 overview-img-text text-center pr-5 pl-5 font-weight-light"><b style="font-size:2rem;">63</b> Promises in total</p>
           </div>
 
           <div class="column-third body-text">
             <div class="d-flex flex-column pl-3 pr-2">
               <p class="text-left">
-                <b class="text-warning" style="font-size:1.4rem;">6</b><br>
+                <b class="content-font-size text-warning">6</b><br>
                 Promises not fulfilled
               </p>
               <p class="text-left">
-                <b class="text-danger" style="font-size:1.4rem;">3</b><br>
+                <b class="content-font-size text-danger">3</b><br>
               Promises stalled</p>
             </div>
           </div> 
@@ -68,7 +68,7 @@
   </div>
 </div>
 
-<div class="container p-0" style="height:350px;max-width:100%;">
+<div class="container iframe-map p-0">
  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d510564.6498664422!2d36.56720029142611!3d-1.3031933719272912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f1172d84d49a7%3A0xf7cf0254b297924c!2sNairobi!5e0!3m2!1sen!2ske!4v1523613390419" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
 
