--- a/wajibisha/templates/blocks/team.html
+++ b/wajibisha/templates/blocks/team.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
-<div class="showcase how-it-works text-center" style="width:100%;">
+<div class="showcase how-it-works text-center">
   <div class="wrapper clearfix text-center">
    <h4>THE TEAM</h4>
    <!--start a first card group-->
