--- a/wajibisha/templates/blocks/tweets.html
+++ b/wajibisha/templates/blocks/tweets.html
@@ -1,12 +1,12 @@
 {% load staticfiles %}
-<section class="tweet-section" style="width:100%;height:auto;">
+<section class="tweet-section">
 <div class=" container pb-5 pt-5">
   <div class="pt-0 d-flex justify-content-center body-text"><h3>Latest tweets<h3></div>
 	<div class="row">
-		<div class="card-group pb-2" style="color:#707070;">
-			<div class="tweet-card card border rounded" style="border-color:#bfd9e8!important;">
+		<div class="card-group pb-2 body-text">
+			<div class="tweet-card card border rounded">
         <div class="d-flex flex-row">
-          <div class="pl-2 pt-4"><img class="rounded-circle" src="http://via.placeholder.com/70x70" alt="image one"></div>
+          <div class="pl-2 pt-4"><img class="rounded-circle" src="http://via.placeholder.com/70x70" alt="Placeholder"></div>
           <div class="pl-3 pr-2 pt-4">
             <p>Wajibisha Tracker @wajibisha</p>
             <p class="pr-4">Sonko does something huuugeee...</p>
@@ -17,9 +17,9 @@
           </div>
         </div>   
       </div>
-      <div class="tweet-card card border rounded" style="border-color:#bfd9e8!important;">
+      <div class="tweet-card card border rounded">
         <div class="d-flex flex-row">
-          <div class="pl-2 pt-4"><img class="rounded-circle" src="http://via.placeholder.com/70x70" alt="image one"></div>
+          <div class="pl-2 pt-4"><img class="rounded-circle" src="http://via.placeholder.com/70x70" alt="Placeholder"></div>
           <div class="pl-3 pr-2 pt-3 pt-4">
             <p>Wajibisha Tracker @wajibisha</p>
             <p class="pr-4">Sonko does something huuugeee....</p>
@@ -30,9 +30,9 @@
           </div>
         </div> 
       </div>
-      <div class="tweet-card card border rounded" style="border-color:#bfd9e8!important;">
+      <div class="tweet-card card border rounded">
         <div class="d-flex flex-row">
-          <div class="pl-2 pt-4"><img class="rounded-circle" src="http://via.placeholder.com/70x70" alt="image one"></div>
+          <div class="pl-2 pt-4"><img class="rounded-circle" src="http://via.placeholder.com/70x70" alt="Placeholder"></div>
           <div class="pl-3 pr-2 pt-4">
             <p>Wajibisha Tracker @wajibisha</p>
             <p class="pr-4">Sonko does something huuugeee....</p>
