--- a/wajibisha/static/css/wajibisha.scss
+++ b/wajibisha/static/css/wajibisha.scss
@@ -132,8 +132,13 @@ body {
 .body-text {
   color:#707070;
 }
+
 .body-text:hover{
   color:#707070;
+}
+
+.borders-color {
+  border-color:#707070;
 }
 
 .country.form-control.form-control-lg {
@@ -150,7 +155,6 @@ body {
   height:11rem;
   background-color:#f6f9fc;
 }
-
 .how-it-works img {
   max-width: 100%;
   width: 180px;
@@ -178,6 +182,15 @@ body {
   margin: 2rem;
   border-color: #B7E4FF;
   padding: 0;
+}
+
+.tweet-section {
+  width:100%;
+  height:auto;
+}
+
+.tweet-card.card.border.rounded {
+  border-color:#bfd9e8!important;
 }
 
 .team {
@@ -348,13 +361,52 @@ img.status-img.card-img.p-0.pl-0 {
   height:150px;
 }
 
-.button.pl-5.pr-5.pt-3.pb-3.m-5.btn.lead.share-button {
-  color:white!important;
-  font-size: 1rem;
-  font-weight: 100;
-  background-color:#0067A3;
-  border-top-left-radius: 50px;
-  border-bottom-left-radius: 50px;
-  border-top-right-radius: 50px;
-  border-bottom-right-radius: 50px;
+.card-slider {
+  height:250px;
+  width:450px;
+  color:white;
+  background: linear-gradient(to bottom, rgba(73,155,234,1) 0%, rgba(0,52,82,1) 100%);
+
 }
+.card-slider:hover {
+  height:250px;
+  width:450px;
+  color:white;
+  background: linear-gradient(to bottom, rgba(73,155,234,1) 0%, rgba(0,52,82,1) 100%);
+
+}
+
+.newsletter button {
+  color:white!important;
+  background-color:#0067a3;
+  width:180px;
+  border-color:#0067a3;
+  font-size:1.2rem;
+  font-weight:100;
+  border-radius:4px;
+}
+
+
+.overview {
+  padding-left:15rem;
+}
+
+.card-position.p-0.body-text {
+  width:600px;
+  height:260px;
+  margin-top:-8rem;
+}
+
+.content-font-size {
+  font-size:1.4rem;
+}
+
+.overview-img-text {
+  margin-top:-8rem;
+}
+
+.container.iframe-map.p-0 {
+  height:350px;
+  max-width:100%;
+}
+
