--- a/wajibisha/templates/blocks/info-card.html
+++ b/wajibisha/templates/blocks/info-card.html
@@ -1,12 +1,12 @@
 <div class="container pt-5">
   <div class="d-flex pl-5 flex-row justify-content-center">
   <div class="col-sm-6 pl-5">
-          <div class="card card-primary p-0" style="height:250px;width:450px;color:white;background: linear-gradient(to bottom, rgba(73,155,234,1) 0%, rgba(0,52,82,1) 100%);">
+          <div class="card-slider card card-primary p-0">
               <div class="card-header">
-                  <h3 class="card-title pt-2" style="color:yellow;">1,681 days to go</h3>
+                  <h3 class="card-title pt-2 yellow-text">1,681 days to go</h3>
               </div>
               <div class="card-block pt-5">
-                  <p>At the current rate it will take <strong style="color:yellow;">1,251</strong> days to complete all 100 promises.</p>
+                  <p>At the current rate it will take <strong class="yellow-text">1,251</strong> days to complete all 100 promises.</p>
               </div>
           </div>
       </div>
