--- a/wajibisha/templates/blocks/newsletter.html
+++ b/wajibisha/templates/blocks/newsletter.html
@@ -1,6 +1,6 @@
 
 <div class="container newsletter">
-  <div class="d-flex justify-content-center pt-5 pb-5"><hr align="center" width="32%" style="border-color:#707070;">
+  <div class="d-flex justify-content-center pt-5 pb-5 borders-color"><hr align="center" width="32%">
 </div>
   <h4 class="text-center pt-3 body-text">Sign up for weekly for weekly tracker updates in your inbox below.</h4>
   <form class="form-inline justify-content-center pt-5 pb-5">
@@ -8,7 +8,7 @@
       <div class="input-group input-group-lg border rounded">
         <input type="text" class="form-control form-control-lg rounded" placeholder="hello@example.com">
         <span class="input-group-btn">
-          <button class="btn btn-md" type="button" style="color:white!important;background-color:#0067a3;width:180px;border-color:#0067a3;font-size:1.2rem;font-weight:100;border-radius:4px;">SUBCRIBE</button>
+          <button class="btn btn-md" type="button">SUBCRIBE</button>
         </span>
       </div>
     </div>
