--- a/wajibisha/templates/fulfilled.html
+++ b/wajibisha/templates/fulfilled.html
@@ -19,12 +19,11 @@
       <!--Start of card row-->
       <div class="row pt-5 pb-5">
         <div class="col-6">
-          <table class="table table-bordered bg-light" style="height:180px;width:520px;">
+          <table class="table table-bordered bg-light">
             <tbody>
               <tr>
-                <td style="width:120px;height:150px;">
-                  <img class="d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled"
-                  style="width:100%;">
+                <td class="table-img">
+                  <img class="img-width d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled">
                 </td>
                 <td colspan="3">
                   <button class="btn btn-primary-label rounded-0 pull-right" type="button">HEALTH</button>
@@ -45,12 +44,11 @@
           </table>
         </div>
         <div class="col-6">
-          <table class="table table-bordered bg-light" style="height:180px;width:520px;">
+          <table class="table table-bordered bg-light">
             <tbody>
               <tr>
-                <td style="width:120px;height:150px;">
-                  <img class="d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled"
-                  style="width:100%;">
+                <td class="table-img">
+                  <img class="img-width d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled">
                 </td>
                 <td colspan="3">
                   <button class="btn btn-primary-label rounded-0 pull-right" type="button">HOUSING</button>
@@ -75,12 +73,11 @@
           <!--start of second card row-->
           <div class="row pt-5 pl-4 pb-5">
             <div class="col-6 pl-0">
-              <table class="table table-bordered bg-light" style="height:180px;width:520px;">
+              <table class="table table-bordered bg-light">
                 <tbody>
                   <tr>
-                    <td style="width:120px;height:150px;">
-                      <img class="d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled"
-                      style="width:100%;">
+                    <td class="table-img">
+                      <img class="img-width d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled">
                     </td>
                     <td colspan="3">
                       <button class="btn btn-primary-label rounded-0 pull-right" type="button">TRAFFIC MANAGEMENT</button>
@@ -101,12 +98,11 @@
               </table>
             </div>
             <div class="col-6">
-              <table class="table table-bordered bg-light" style="height:180px;width:520px;">
+              <table class="table table-bordered bg-light">
                 <tbody>
                   <tr>
-                    <td style="width:120px;height:150px;">
-                      <img class="d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled"
-                      style="width:100%;">
+                    <td class="table-img">
+                      <img class="img-width d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled">
                     </td>
                     <td colspan="3">
                       <button class="btn btn-primary-label rounded-0 pull-right" type="button" >HEALTH</button>
@@ -132,12 +128,11 @@
         <!--Start of third card row-->
         <div class="row pt-5 pl-4 pb-5">
             <div class="col-6 pl-0">
-              <table class="table table-bordered bg-light" style="height:180px;width:520px;">
+              <table class="table table-bordered bg-light">
                 <tbody>
                   <tr>
-                    <td style="width:120px;height:150px;">
-                      <img class="d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled"
-                      style="width:100%;">
+                    <td class="table-img">
+                      <img class="img-width d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled">
                     </td>
                     <td colspan="3">
                       <button class="btn btn-primary-label rounded-0 pull-right" type="button">HEALTH</button>
@@ -158,12 +153,11 @@
               </table>
             </div>
             <div class="col-6">
-              <table class="table table-bordered bg-light" style="height:180px;width:520px;">
+              <table class="table table-bordered bg-light">
                 <tbody>
                   <tr>
-                    <td style="width:120px;height:150px;">
-                      <img class="d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled"
-                      style="width:100%;">
+                    <td class="table-img">
+                      <img class="img-width d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled">
                     </td>
                     <td colspan="3">
                       <button class="btn btn-primary-label rounded-0 pull-right" type="button" >HOUSING</button>
@@ -189,12 +183,11 @@
         <!--Stand-alone row-->
         <div class="row pb-5">
             <div class="col-6 pl-0">
-              <table class="table table-bordered bg-light" style="height:180px;width:520px;">
+              <table class="table table-bordered bg-light">
                 <tbody>
                   <tr>
-                    <td style="width:120px;height:150px;">
-                      <img class="d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled"
-                      style="width:100%;">
+                    <td class="table-img">
+                      <img class="img-width d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled">
                     </td>
                     <td colspan="3">
                       <button class="btn btn-primary-label rounded-0 pull-right" type="button">TRAFFIC MANAGEMENT</button>
