--- a/wajibisha/static/css/wajibisha.scss
+++ b/wajibisha/static/css/wajibisha.scss
@@ -59,7 +59,8 @@ body {
 
   }
 }
-/*Header section*/
+
+/*HEADER SECTION*/
 .clipped-header {
   background-color: $color-blue;
   height: 280px;
@@ -111,12 +112,29 @@ body {
   z-index: 1003;
   height: 200px;
   position: absolute;
-  right: 0; }
+  right: 0; 
+}
 
+.container.iframe-map.p-0 {
+  height:350px;
+  max-width:100%;
+}
+
+/* LANDING PAGE SEARCH FORM */
+.country.form-control.form-control-lg {
+  width: 200px;
+  font-size:1rem;
+  background-color:#4CAE4E;
+  border-color: #4CAE4E;
+}
+.country option {
+  background-color:#4CAE4E;
+}
 .showcase h4 {
   color:#0067a3;
 }
 
+/*COLORS AND TEXT */
 .space{
   padding-top:1rem;
 }
@@ -137,18 +155,20 @@ body {
   color:#707070;
 }
 
+.breadcrumb-color {
+  color:#006699;
+}
+
 .borders-color {
   border-color:#707070;
 }
 
-.country.form-control.form-control-lg {
-  width: 200px;
-  font-size:1rem;
-  background-color:#4CAE4E;
-  border-color: #4CAE4E;
+.card-promise-text {
+  font-size:14px;
 }
-.country option {
-  background-color:#4CAE4E;
+
+.number-text {
+  font-size:28px;
 }
 
 .details {
@@ -167,21 +187,6 @@ body {
 
 .background{
   background-color: #ededed;
-}
-
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  padding: 50px 20px;
-  height: 350px;
-  background-color: #fff;
-}
-
-.tweet-card {
-  height: 200px;
-  margin: 2rem;
-  border-color: #B7E4FF;
-  padding: 0;
 }
 
 .tweet-section {
@@ -224,7 +229,7 @@ select.form-control.form-control-lg {
   font-size: 18px;
 }
 
-/*Footer section*/
+/*FOOTER SECTION*/
 .footer-text {
   text-decoration:none;
 }
@@ -238,7 +243,8 @@ select.form-control.form-control-lg {
   max-height:65px;
   margin:10px
 }
-/* Article section */
+
+/* ARTICLE SECTION */
 .article-label{
   margin:-45px;
   margin-top: -80px;
@@ -274,22 +280,13 @@ select.form-control.form-control-lg {
   width:18rem;
 }
 
-.card-hw {
-  height:610px;
-  width:300px;
-}
-
 .hr-nav {
   border-color:#0067A3;
   height:12px;
   width:100%;
 }
 
-.card-height {
-  height:580px;
-}
-
-/*Category section*/
+/*CATEGORY SECTION*/
 .btn.btn-primary-right {
   color:#808080;
   border-color: #808080;
@@ -306,20 +303,7 @@ select.form-control.form-control-lg {
   border-bottom-right-radius:50px;
 }
 
-
-
-.card.p-0.offset-1 {
-  height:200px;
-}
-img.category-card-img.card-img.p-0.pl-0 {
-  height:150px;
-  width:180px;
-  margin-top:-3rem;
-}
-/*Fulfilled section*/
-
-
-/*health*/
+/* BUTTONS */
 .btn.btn-primary-buttons {
   color:white;
   border-color:#0067A3;
@@ -336,14 +320,48 @@ img.category-card-img.card-img.p-0.pl-0 {
   color: #ededed;
 }
 
-/*Promises*/
+/* CARDS*/
+
+.card-hw {
+  height:610px;
+  width:300px;
+}
+
+.card-height {
+  height:580px;
+} 
+
+.card.p-0.offset-1 {
+  height:200px;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  padding: 50px 20px;
+  height: 350px;
+  background-color: #fff;
+}
+
+.tweet-card {
+  height: 200px;
+  margin: 2rem;
+  border-color: #B7E4FF;
+  padding: 0;
+} 
+
+img.category-card-img.card-img.p-0.pl-0 {
+  height:150px;
+  width:180px;
+  margin-top:-3rem;
+}
+
 .card-block.border {
   height:200px;
   width:320px;
   margin-left:-10px;
   background-color:#ededed;
   border-color:rgba(112, 112, 112, 0.2);
-
 }
 
 img.status-img.card-img.p-0.pl-0 {
@@ -375,26 +393,14 @@ img.status-img.card-img.p-0.pl-0 {
   background: linear-gradient(to bottom, rgba(73,155,234,1) 0%, rgba(0,52,82,1) 100%);
 
 }
-
-.newsletter button {
-  color:white!important;
-  background-color:#0067a3;
-  width:180px;
-  border-color:#0067a3;
-  font-size:1.2rem;
-  font-weight:100;
-  border-radius:4px;
-}
-
-
-.overview {
-  padding-left:15rem;
-}
-
 .card-position.p-0.body-text {
   width:600px;
   height:260px;
   margin-top:-8rem;
+}
+
+.overview {
+  padding-left:15rem;
 }
 
 .content-font-size {
@@ -405,8 +411,28 @@ img.status-img.card-img.p-0.pl-0 {
   margin-top:-8rem;
 }
 
-.container.iframe-map.p-0 {
-  height:350px;
-  max-width:100%;
+/*NEWSLETTER SECTION*/
+.newsletter button {
+  color:white!important;
+  background-color:#0067a3;
+  width:180px;
+  border-color:#0067a3;
+  font-size:1.2rem;
+  font-weight:100;
+  border-radius:4px;
 }
 
+/* TABLES */
+.table.table.table-bordered.bg-light{
+    height: 180px;
+    width: 520px;
+}
+
+td.table-img{
+  width:120px;
+  height:150px;
+}
+
+img.img-width.d-block.p-0 {
+  width:100%;
+}
