--- a/wajibisha/templates/health.html
+++ b/wajibisha/templates/health.html
@@ -18,12 +18,12 @@
       <div class="row">
         <div class="col-6 pull-left">
           <div class="row d-flex flex-row justify-content-start">
-            <p><i class="fa fa-3x fa-angle-left pr-4" aria-hidden="true" style="color:#0067A3;"></i><strong class="pr-4">GO BACK</strong><span> Showing 1 - 7 of 7 promises</span></p>
+            <p><i class="fa fa-3x fa-angle-left pr-4 breadcrumb-color" aria-hidden="true"></i><strong class="pr-4">GO BACK</strong><span> Showing 1 - 7 of 7 promises</span></p>
           </div>
         </div>
         <div clas="col-6 text-left">
           <div class="d-flex flex-row justify-content-start">
-            <div class="row d-flex flex-row justify-content-end pb-5" style="color:#006699;">
+            <div class="row d-flex flex-row justify-content-end pb-5 breadcrumb-color">
               <p class="small pt-3 pb-3">Filter by:</p>
               <div class="d-flex flex-row judtify-content-end pl-4 pt-2 pr-5 ">
                 <div class="dropdown pl-4">
@@ -54,15 +54,14 @@
             </div>
           </div>
           <!--Start of card section-->
-          <div class="container pt-5">
+          <div class="container table-content pt-5">
             <div class="row pt-5 pb-5">
               <div class="col-6">
-                <table class="table table-bordered bg-light" style="height:180px;width:520px;">
+                <table class="table table-bordered bg-light">
                   <tbody>
                     <tr>
-                      <td style="width:120px;height:150px;">
-                        <img class="d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled"
-                        style="width:100%;">
+                      <td class="table-img">
+                        <img class="img-width d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled">
                       </td>
                       <td colspan="3">
                         <button class="btn btn-primary-label rounded-0 pull-right" type="button">HEALTH</button>
@@ -83,12 +82,11 @@
                 </table>
               </div>
               <div class="col-6">
-                <table class="table table-bordered bg-light" style="height:180px;width:520px;">
+                <table class="table table-bordered bg-light">
                   <tbody>
                     <tr>
-                      <td style="width:120px;height:150px;">
-                        <img class="d-block p-0" src="{% static 'img/tracker/status/stalled-portrait.svg' %}" alt="Fulfilled"
-                        style="width:100%;">
+                      <td class="table-img">
+                        <img class="img-width d-block p-0" src="{% static 'img/tracker/status/stalled-portrait.svg' %}" alt="Fulfilled">
                       </td>
                       <td colspan="3">
                         <button class="btn btn-primary-label rounded-0 pull-right" type="button">HEALTH</button>
@@ -111,12 +109,11 @@
               <!--Start of second card row-->
               <div class="row pt-5 pl-3 pb-5">
                 <div class="col-6">
-                  <table class="table table-bordered bg-light" style="height:180px;width:520px;">
+                  <table class="table table-bordered bg-light">
                     <tbody>
                       <tr>
-                        <td style="width:120px;height:150px;">
-                          <img class="d-block p-0" src="{% static 'img/tracker/status/in-progress-portrait.svg' %}" alt="Fulfilled"
-                          style="width:100%;">
+                        <td class="table-img">
+                          <img class="img-width d-block p-0" src="{% static 'img/tracker/status/in-progress-portrait.svg' %}" alt="Fulfilled">
                         </td>
                         <td colspan="3">
                           <button class="btn btn-primary-label rounded-0 pull-right" type="button">HEALTH</button>
@@ -137,12 +134,11 @@
                   </table>
                 </div>
                 <div class="col-6 pl-4">
-                  <table class="table table-bordered bg-light" style="height:180px;width:520px;">
+                  <table class="table table-bordered bg-light">
                     <tbody>
                       <tr>
-                        <td style="width:120px;height:150px;">
-                          <img class="d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled"
-                          style="width:100%;">
+                        <td class="table-img">
+                          <img class="img-width d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled">
                         </td>
                         <td colspan="3">
                           <button class="btn btn-primary-label rounded-0 pull-right" type="button">HEALTH</button>
@@ -169,12 +165,11 @@
             <!--Start of third card row-->
             <div class="row pl-3 pb-5">
               <div class="col-6">
-                <table class="table table-bordered bg-light" style="height:180px;width:520px;">
+                <table class="table table-bordered bg-light">
                   <tbody>
                     <tr>
-                      <td style="width:120px;height:150px;">
-                        <img class="d-block p-0" src="{% static 'img/tracker/status/unfulfilled-portrait.svg' %}" alt="Fulfilled"
-                        style="width:100%;">
+                      <td class="table-img">
+                        <img class="img-width d-block p-0" src="{% static 'img/tracker/status/unfulfilled-portrait.svg' %}" alt="Fulfilled">
                       </td>
                       <td colspan="3">
                         <button class="btn btn-primary-label rounded-0 pull-right" type="button">HEALTH</button>
@@ -195,12 +190,11 @@
                 </table>
               </div>
               <div class="col-6 pl-4">
-                <table class="table table-bordered bg-light" style="height:180px;width:520px;">
+                <table class="table table-bordered bg-light">
                   <tbody>
                     <tr>
-                      <td style="width:120px;height:150px;">
-                        <img class="d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled"
-                        style="width:100%;">
+                      <td class="table-img">
+                        <img class="img-width d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled">
                       </td>
                       <td colspan="3">
                         <button class="btn btn-primary-label rounded-0 pull-right" type="button">HEALTH</button>
@@ -225,12 +219,11 @@
           <!--start of card row-->
           <div class="row pt-5 pl-3 pb-5">
             <div class="col-6">
-              <table class="table table-bordered bg-light" style="height:180px;width:520px;">
+              <table class="table table-bordered bg-light">
                 <tbody>
                   <tr>
-                    <td style="width:120px;height:150px;">
-                      <img class="d-block p-0" src="{% static 'img/tracker/status/in-progress-portrait.svg' %}" alt="Fulfilled"
-                      style="width:100%;">
+                    <td class="table-img">
+                      <img class="img-width d-block p-0" src="{% static 'img/tracker/status/in-progress-portrait.svg' %}" alt="Fulfilled">
                     </td>
                     <td colspan="3">
                       <button class="btn btn-primary-label rounded-0 pull-right" type="button">HEALTH</button>
@@ -251,12 +244,11 @@
               </table>
             </div>
             <div class="col-6 pl-4">
-              <table class="table table-bordered bg-light" style="height:180px;width:520px;">
+              <table class="table table-bordered bg-light">
                 <tbody>
                   <tr>
-                    <td style="width:120px;height:150px;">
-                      <img class="d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled"
-                      style="width:100%;">
+                    <td class="table-img">
+                      <img class="img-width d-block p-0" src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}" alt="Fulfilled">
                     </td>
                     <td colspan="3">
                       <button class="btn btn-primary_label rounded-0 pull-right" type="button">HEALTH</button>
