--- a/wajibisha/templates/promises.html
+++ b/wajibisha/templates/promises.html
@@ -13,7 +13,7 @@
     <br/>
   </div>
   <div class="container">
-    <div class="row d-flex flex-row justify-content-end pb-5" style="color:#006699;">
+    <div class="row d-flex flex-row justify-content-end pb-5 breadcrumb-color">
       <p class="small pt-3 pb-3">Group by:</p>
       <div class="btn-group pl-4 pr-5" role="group" aria-label="Group by"">
         <button type="button" class="btn btn-primary pl-4 pr-3 border-2" style="border-top-left-radius:50px;border-bottom-left-radius:50px;border-color:#0067A3;background-color:#0067A3!important;">STATUS</button>
@@ -30,9 +30,9 @@
               <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/category/health.svg' %}">
             </div>
             <div class="col-6 p-0">
-              <div class="">
-                <p class="lead pr-5"><b class="text-large">14 </b><span style="font-size:14px;"> Promises</span></p>
-                <p class="lead pt-0 pr-4"><b style="font-size:28px;">7% </b><span style="font-size:14px;"> Complete</span></p>
+              <div>
+                <p class="lead pr-5"><b class="text-large">14 </b><span class="card-promise-text"> Promises</span></p>
+                <p class="lead pt-0 pr-4"><b class="number-text">7% </b><span class="card-promise-text"> Complete</span></p>
               </div>
             </div>
           </div>
@@ -68,9 +68,9 @@
               <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/category/housing.svg' %}" >
             </div>
             <div class="col-6 p-0">
-              <div class="">
-                <p class="lead pr-5"><b class="text-large">14 </b><span style="font-size:14px;"> Promises</span></p>
-                <p class="lead pt-0 pr-4"><b style="font-size:28px;">7% </b><span style="font-size:14px;"> Complete</span></p>
+              <div>
+                <p class="lead pr-5"><b class="text-large">14 </b><span class="card-promise-text"> Promises</span></p>
+                <p class="lead pt-0 pr-4"><b class="number-text">7% </b><span class="card-promise-text"> Complete</span></p>
               </div>
             </div>
           </div>
@@ -106,9 +106,9 @@
               <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/category/jobs.svg' %}">
             </div>
             <div class="col-6 p-0">
-              <div class="">
-                <p class="lead pr-5"><b class="text-large">14 </b><span style="font-size:14px;"> Promises</span></p>
-                <p class="lead pt-0 pr-4"><b style="font-size:28px;">7% </b><span style="font-size:14px;"> Complete</span></p>
+              <div>
+                <p class="lead pr-5"><b class="text-large">14 </b><span class="card-promise-text"> Promises</span></p>
+                <p class="lead pt-0 pr-4"><b class="number-text">7% </b><span class="card-promise-text"> Complete</span></p>
               </div>
             </div>
           </div>
@@ -147,9 +147,9 @@
                   <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/category/governance.svg' %}">
                 </div>
                 <div class="col-6 p-0">
-                  <div class="">
-                    <p class="lead pr-5"><b class="text-large">14 </b><span style="font-size:14px;"> Promises</span></p>
-                    <p class="lead pt-0 pr-4"><b style="font-size:28px;">7% </b><span style="font-size:14px;"> Complete</span></p>
+                  <div>
+                    <p class="lead pr-5"><b class="text-large">14 </b><span class="card-promise-text"> Promises</span></p>
+                    <p class="lead pt-0 pr-4"><b class="number-text">7% </b><span class="card-promise-text"> Complete</span></p>
                   </div>
                 </div>
               </div>
@@ -184,9 +184,9 @@
                   <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/category/environment.svg' %}">
                 </div>
                 <div class="col-6 p-0">
-                  <div class="">
-                    <p class="lead pr-5"><b class="text-large">14 </b><span style="font-size:14px;"> Promises</span></p>
-                    <p class="lead pt-0 pr-4"><b style="font-size:28px;">7% </b><span style="font-size:14px;"> Complete</span></p>
+                  <div>
+                    <p class="lead pr-5"><b class="text-large">14 </b><span class="card-promise-text"> Promises</span></p>
+                    <p class="lead pt-0 pr-4"><b class="number-text">7% </b><span class="card-promise-text"> Complete</span></p>
                   </div>
                 </div>
               </div>
@@ -222,8 +222,8 @@
                 </div>
                 <div class="col-6 p-0">
                   <div class="">
-                    <p class="lead pr-5"><b class="text-large">14 </b><span style="font-size:14px;"> Promises</span></p>
-                    <p class="lead pt-0 pr-4"><b style="font-size:28px;">7% </b><span style="font-size:14px;"> Complete</span></p>
+                    <p class="lead pr-5"><b class="text-large">14 </b><span class="card-promise-text""> Promises</span></p>
+                    <p class="lead pt-0 pr-4"><b sclass="number-text">7% </b><span class="card-promise-text"> Complete</span></p>
                   </div>
                 </div>
               </div>
@@ -258,9 +258,9 @@
                   <img class="status-img card-img p-0 pl-0" src="{% static 'img/tracker/category/social-inclusion.svg' %}" >
                 </div>
                 <div class="col-6 p-0">
-                  <div class="">
-                    <p class="lead pr-5"><b class="text-large">14 </b><span style="font-size:14px;"> Promises</span></p>
-                    <p class="lead pt-0 pr-4"><b style="font-size:28px;">7% </b><span style="font-size:14px;"> Complete</span></p>
+                  <div>
+                    <p class="lead pr-5"><b class="text-large">14 </b><span class="card-promise-text"> Promises</span></p>
+                    <p class="lead pt-0 pr-4"><b class="number-text">7% </b><span class="card-promise-text"> Complete</span></p>
                   </div>
                 </div>
               </div>
