use url tag for nav links

--- a/wajibisha/static/css/wajibisha.scss
+++ b/wajibisha/static/css/wajibisha.scss
@@ -460,3 +460,35 @@ img.img-width.d-block.p-0 {
   width:100%;
 }
 
+#slippy-map {
+  top: 250px !important;
+}
+
+.mt-200 {
+  margin-top: 200px;
+}
+
+.promise-select {
+  border-radius: 5px !important;
+  background-color: #0067a3 !important;
+  color: #FFFFFF !important;
+}
+
+.filter-text {
+  display: table-cell;
+  vertical-align: middle;
+  height: 100%;
+  line-height: 5px;
+}
+
+.text-blue {
+  color: #0067a3;
+}
+
+.text-white {
+  color: #FFFFFF;
+}
+
+.mt-20 {
+  margin-top: 20px;
+}
