--- a/wajibisha/templates/blocks/promises-header.html
+++ b/wajibisha/templates/blocks/promises-header.html
@@ -2,10 +2,10 @@
 <div class="promises-header clearfix">
 	<div class="wrapper content-container">
 		<div class="column-third text-left">
-			<h2>Nairobi</h2>
+			<h2>{{ geography.this.short_name }}</h2>
 			<div class="blue-text">
-				<p class="m-0">Population: 3,138,369</p>
-				<p>Area: 696 sq.km</p>
+				<p class="m-0">Population: {{ demographics.total_population.values.this|floatformat:"0" }}</p>
+				<p>Area: {% if geography.this.square_kms < 1.0 %}{{ geography.this.square_kms|floatformat:"3" }}{% else %}{{ geography.this.square_kms|floatformat:"1" }}{% endif %} sq.km</p>
 			</div>
 			<p class="blue-text">Censes data: 2009</p>
 		</div>
@@ -68,13 +68,6 @@
   </div>
 </div>
 
-<div class="container iframe-map p-0">
- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d510564.6498664422!2d36.56720029142611!3d-1.3031933719272912!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f1172d84d49a7%3A0xf7cf0254b297924c!2sNairobi!5e0!3m2!1sen!2ske!4v1523613390419" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
-</div>
-
-<div class="text-center pb-2" style="margin-top:-4rem;">
- <a hef=""><button class="btn" style="color:white;border-top-left-radius:50px;border-top-right-radius:50px;border-bottom-left-radius:50px;border-bottom-right-radius:50px;border-color:#0067A3;background-color:#0067A3;">ENLARGE BUTTON</button></a>
-</div>
 
 
 
