--- a/wajibisha/templates/profile/profile_detail_promises.html
+++ b/wajibisha/templates/profile/profile_detail_promises.html
@@ -69,8 +69,9 @@
             </div>
           </div>
         </div>
+        <br>
 
-        <p><a href="/promises/county-47-nairobi">View Detailed Promises</a></p>
+        <button class="btn btn-success mt-20"><a href="/promises/county-47-nairobi" class="text-white">View Breakdown...</a></button>
       </div>
 
     </div>
