school region leaguetable and testing id

--- a/elimu_yangu/leaguetable/templates/leaguetable/specific_school.html
+++ b/elimu_yangu/leaguetable/templates/leaguetable/specific_school.html
@@ -105,7 +105,7 @@
                     </div>
                     <div class="col-xs-5">
                         <div class="school-rank">#{{ school.national_rank_all }} in Tanzania</div>
-                        <div class="school-rank">#{{ school.regional_rank_all }} in Morogoro</div>
+                        <div class="school-rank">#{{ school.regional_rank_all }} in {{ school.region }}</div>
                     </div>
                     <div class="col-xs-2">
                         {{ school.avg_gpa }} GPA
