cleaned up profiles code

--- a/wajibisha/templates/profile/profile_detail_promises.html
+++ b/wajibisha/templates/profile/profile_detail_promises.html
@@ -4,7 +4,7 @@
   <div id="cover-map" class="clearfix" id="wajibisha_profile_header">
     <div id="slippy-map"></div>
     <div id="cover-profile" class="">
-      {% include 'blocks/promises-header.html' %}
+      {% include 'blocks/promises-header.html' with stat=promise_totals.totals%}
     </div>
   </div>
 
