added value_zero filter

--- a/wajibisha/templates/promises.html
+++ b/wajibisha/templates/promises.html
@@ -1,5 +1,5 @@
 {% extends 'profile/profile_detail.html' %}{% load sass_tags staticfiles %}
 
 {% block profile_detail %}
-  {% include 'blocks/filter_promises.html' with promises_json=promises_json sectors=sectors statuses=status %}
+  {% include 'blocks/filter_promises.html' with promises_json=promises_json sectors=sectors statuses=statuses %}
 {% endblock %}
