--- a/wajibisha/templates/profile/profile_detail_promises.html
+++ b/wajibisha/templates/profile/profile_detail_promises.html
@@ -4,7 +4,7 @@
   <div id="cover-map" class="clearfix" id="wajibisha_profile_header">
     <div id="slippy-map"></div>
     <div id="cover-profile" class="">
-      {% include 'blocks/promises-header.html' with stat=promise_totals.totals%}
+      {% include 'blocks/promises-header.html' with stat=promise_by_status %}
     </div>
   </div>
 
@@ -15,7 +15,7 @@
 
     <div class="showcase how-it-works text-center">
       <div class="wrapper clearfix">
-        <h2>All the promises</h2>
+        <h2>Promises</h2>
         <br/>
       </div>
       <div class="container">
@@ -25,6 +25,10 @@
           <div class="btn-group pl-4 pr-5" role="group" aria-label="Group by">
             <button type="button" class="btn btn-primary pl-4 pr-3 border-2"
                     style="border-top-left-radius:50px;border-bottom-left-radius:50px;border-color:#0067A3;background-color:#0067A3;">
+              ALL
+            </button>
+            <button type="button" class="btn pr-4" disabled
+                    style="border-color:#808080;background-color:#f9f9f9!important;">
               STATUS
             </button>
             <button type="button" class="btn pr-4 border-2" disabled
